--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,14 +14,13 @@
     "default_title": "React Chrome Extension Boilerplate"
   },
   "background": {
-    "scripts": ["./jquery.js", "background.js"]
+    "scripts": ["background.js"]
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "all_frames": true,
     "js": [
-      "./content.js",
-      "./jquery.js"
+      "./content.js"
     ],
     "run_at": "document_end"
   }],
